@startuml

class Articulo {
    -String idArticulo
    -String nombre
    -int cantidad
    -double precio
    --
    +Articulo(String, String, int, double)
    +String getIdArticulo()
    +void setIdArticulo(String)
    +String getNombre()
    +void setNombre(String)
    +int getCantidad()
    +void setCantidad(int)
    +double getPrecio()
    +void setPrecio(double)
    +String toString()
}

class AlimentoPerecedero {
    -LocalDate fechaCaducidad
    --
    +AlimentoPerecedero(String, String, int, double, LocalDate)
    +boolean estaProximoACaducar()
    +void aplicarDescuentoProximoACaducar()
    +LocalDate getFechaCaducidad()
    +void setFechaCaducidad(LocalDate)
    +String toString()
}

class DispositivoElectronico {
    -int mesesGarantia
    --
    +DispositivoElectronico(String, String, int, double, int)
    +boolean tieneGarantiaVigente()
    +void aplicarDescuentoFueraDeGarantia()
    +int getMesesGarantia()
    +void setMesesGarantia(int)
    +String toString()
}

class Inventario {
    -Map<String, Articulo> articulos
    --
    +Inventario()
    +void agregarArticulo(Articulo)
    +void aplicarDescuentos()
    +void mostrarInventario()
    +Map<String, Articulo> getArticulos()
}

class Reporte {
    -Inventario inventario
    --
    +Reporte(Inventario)
    +void generarReporteTotalArticulos()
    +void generarReportePerecederosAPuntoDeCaducar()
    +void generarReporteElectronicosFueraDeGarantia()
}

Articulo <|-- AlimentoPerecedero
Articulo <|-- DispositivoElectronico
Inventario "1" --> "*" Articulo
Reporte "1" --> "1" Inventario

@enduml
